--- a/.github/workflows/manual2.yml
+++ b/.github/workflows/manual2.yml
@@ -1,32 +1,63 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: TestPROGPOE
 
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-        # The data type of the input
-        type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
+  # This workflow contains a single job called "build"
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+     # list contents or directory
+      - name: List contents
+        run: ls
+     # Compiles classes to test 
+      - name: compile classes
+        working-directory: ./src
+        run: javac -cp "../lib/junit-platform-console-standalone-1.6.0.jar" ./st10228343/ST10228343.java ./st10228343/Tasks.java "../test/st10228343/TestTest.java"
+
+    # list contents of src to verify that classess compiled 
+      - name: List contents of src directory after compile
+        working-directory: ./src/st10228343
+        run: ls
+
+
+       # copy compiled classes to test directory 
+      - name : copy compiled classes to testresources directory 
+        working-directory: ./src/st10228343
+        run: cp -t  "../../test/st10228343" Task.class
+
+        #copy compiled tests 
+      - name : copy compiled Test classes to testresources directory 
+        working-directory: ./test/st10228343
+        run: cp -t  "../../test/" Tasks.class
+
+        # list contents or directory
+      - name: List contents test package
+        working-directory: ./test/st10228343
+        run: ls
+
+        #run Message Class tests and output report 
+      - name: run Messages Class tests and create report 
+        working-directory: ./test
+        run: |
+         ls
+         java -jar  "../lib/junit-platform-console-standalone-1.6.0.jar" -cp "." --select-class  st10228343.TasksTest
+        
