--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,9 +30,13 @@ jobs:
         working-directory: ./src/st10228343
         run: cp -t "../../test/st10228343" Login.class Tasks.class
 
+      - name: Remove existing LoginTest.class in test resources directory
+        working-directory: ./test/st10228343
+        run: rm -f "../../test/st10228343/LoginTest.class"
+
       - name: Copy compiled test classes to test resources directory
         working-directory: ./test/st10228343
-        run: cp LoginTest.class "../../test/st10228343/LoginTestCopy.class"
+        run: cp LoginTest.class "../../test/st10228343/LoginTest.class"
 
       - name: List contents of test package
         working-directory: ./test/st10228343
@@ -41,6 +45,3 @@ jobs:
       - name: Run LoginTest and generate report
         working-directory: ./test
         run: java -jar "../lib/junit-platform-console-standalone-1.6.0.jar" -cp "." --select-class st10228343.LoginTest
-
-
-        
