--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,7 +32,10 @@ jobs:
 
       - name: Copy compiled test classes to test resources directory
         working-directory: ./test/st10228343
-        run: cp LoginTest.class "../../test/st10228343/LoginTest.class"
+        run: |
+          if [ ! -f "../../test/st10228343/LoginTest.class" ]; then
+            cp LoginTest.class "../../test/st10228343/LoginTest.class"
+          fi
 
       - name: List contents of test package
         working-directory: ./test/st10228343
@@ -41,6 +44,7 @@ jobs:
       - name: Run LoginTest and generate report
         working-directory: ./test
         run: java -jar "../lib/junit-platform-console-standalone-1.6.0.jar" -cp "." --select-class st10228343.LoginTest
+
 
 
 
